# football-calculator

./: .gitignore  README.md  features.py  pyproject.toml
tests/: test_features.py  test_shots.csv  test_tracks.csv
